修改suno接口进行统一
